# thesis

./: CMakeLists.txt  Neuron.cpp  Neuron.h  NeuronCluster.cpp  NeuronCluster.h  Planning  STInt.cpp  STint.h  TimeData.cpp  TimeData.h  event.cpp  event.h  filereader.cpp  filereader.h  filereaderbin.cpp  filereaderbin.h  filewriter.cpp  filewriter.h  filewriterbin.cpp  filewriterbin.h  global.h  main.cpp  plot.ipynb  plot.py  system.cpp  system.h  testfunctions.cpp  testfunctions.h
